--- a/modify2.html
+++ b/modify2.html
@@ -47,35 +47,58 @@
 <!-- show case artist -->
 <div class="artworkdetail">
 
-  <h2 class="h2">Pilgrimage</h2>
+  <h2 class="h2">Modify the Commission</h2>
 
 
 
     <div class="flex-grid">
-      <div class = "three-col">
-        <img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct">
+      <div class = "three-col order2">
+        <img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2.png" alt="sct">
       </div>
       <div class = "three-col">
-        <h3 class="h3">$80</h3>
-          <p>Artwork description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis.</p>
-          <div class = "singlebutton">
-          <a class="submit" href="rule.html">Commission</a>
+        <p>How many characters would you like for this commission? </p>
+        <select>
+          <option value="volvo">I would like 1 character</option>
+          <option value="saab">I would like 2 characters</option>
+          <option value="opel">I would like 3 characters</option>
+          <option value="audi">I would like 4 characters</option>
+        </select>
+        <p>What kind of background would you like for this commission? </p>
+        <select>
+          <option value="volvo">no background</option>
+          <option value="saab">solid background</option>
+          <option value="opel">designed background</option>
+          <option value="audi">full background</option>
+        </select>
+        <p>What kind of color style would you like for this commission? </p>
+        <select>
+          <option value="volvo">line art</option>
+          <option value="saab">base color</option>
+          <option value="opel">only shade</option>
+          <option value="audi">full colored</option>
+        </select>
+        <div class="pairbutton">
+          <a class="reset" href="rule.html">Cancel</a>
+          <a class="submit" href="review.html">Submit</a>
         </div>
-      </div>
+        </div>
         <div class = "three-col profile">
-          <a href="artistdetail.html"><img src = "img/26605861_p0_meitu_11.png" alt = "prf"></a>
-          <a href="artistdetail.html" class="intextlink">Natsume Kazuki</a>
+          <img src = "img/tumblr_ms5fl1J7DJ1qgsw73o1_r1_1280c.png" alt = "prf">
+          <a href="artistdetail.html" class="intextlink">Sachin Teng</a>
 
-          <p class = "attribution">Average finishing Time: 3 days</p>
-          <p class = "attribution">Average price: $100</p>
-          <p class = "attribution">Rate: 7.8</p>
+          <p class = "attribution">Average finishing Time: 7days</p>
+          <p class = "attribution">Average price: $300</p>
+          <p class = "attribution">Rate: 8.6</p>
+          <p class = "attribution">Artist tag: American style, fine quality</p>
           <p>Artist description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis.</p>
 
         </div>
 
-
           </div>
-</div>
+
+
+
+        </div>
 
 
     <!-- footer -->
