--- a/review2.html
+++ b/review2.html
@@ -47,41 +47,60 @@
 <!-- show case artist -->
 <div class="artworkdetail">
 
-  <h2 class="h2">Pilgrimage</h2>
+  <h2 class="h2">Review</h2>
 
 
 
     <div class="flex-grid">
-      <div class = "three-col">
-        <img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct">
+      <div class = "two-col1 order2">
+        <img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2.png" alt="sct">
       </div>
-      <div class = "three-col">
-        <h3 class="h3">$80</h3>
-          <p>Artwork description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis.</p>
-          <div class = "singlebutton">
-          <a class="submit" href="rule.html">Commission</a>
+      <div class = "two-col2">
+        <nav class="filter">
+        <table>
+          <tr>
+            <th>How many characters?</th>
+            <td>3</td>
+            <td>+ $40</td>
+          </tr>
+          <tr>
+            <th>What kind of background style?</th>
+            <td>Full colored background</td>
+            <td>+ $20</td>
+          </tr>
+          <tr>
+            <th>What kind of color style?</th>
+            <td>Only shaded</td>
+            <td>- $10</td>
+          </tr>
+          <tr>
+            <th>Base price</th>
+            <td> </td>
+            <td>&nbsp; &nbsp;$50</td>
+          </tr>
+        </table>
+      </nav>
+      <div class = "subtotal">
+      <h3 class="h3">Subtotal: $100</h3>
+    </div>
+        <div class="pairbutton reviewbutton">
+          <a class="reset" href="modify2.html">Cancel</a>
+          <a class="submit" href="success.html">Submit</a>
         </div>
-      </div>
-        <div class = "three-col profile">
-          <a href="artistdetail.html"><img src = "img/26605861_p0_meitu_11.png" alt = "prf"></a>
-          <a href="artistdetail.html" class="intextlink">Natsume Kazuki</a>
+        </div>
 
-          <p class = "attribution">Average finishing Time: 3 days</p>
-          <p class = "attribution">Average price: $100</p>
-          <p class = "attribution">Rate: 7.8</p>
-          <p>Artist description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis.</p>
+
 
         </div>
 
 
           </div>
-</div>
 
 
     <!-- footer -->
 
       <div class="flex-grid footer">
-          <div class = "three-col">
+          <div class = "three-col ">
             <a class="intextlink" href="about.html">About Us</a>
           </div>
           <div class = "three-col">
