--- a/rule.html
+++ b/rule.html
@@ -92,7 +92,7 @@
             <a class="intextlink" href="about.html">About Us</a>
           </div>
           <div class = "three-col">
-            <a class="intextlink" href="termsofuse.html">Terms of Use</a>
+            <a class="intextlink" href="Style_guide.html">Style Guide/Citations/Github</a>
           </div>
           <div class = "three-col">
             <a class="intextlink" href="contact.html">Contact Us</a>
