--- a/about.html
+++ b/about.html
@@ -15,11 +15,34 @@
     <!-- navigation bar -->
     <nav class = "navigation navbar">
       <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
-      <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
-      <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
-      <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
-      <div class = "navelement"><a href="account.html" class = "navbutton">Account</a></div>
+      <div class = "navspace"></div>
+        <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
+        <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
+        <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
+
     </nav>
+
+    <!-- this is burger menu for the mobile -->
+    <div class = "mobilemenu">
+
+        <div id="myNav" class="overlay">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <div class="overlay-content">
+        <a href="artists.html" class = "navbutton">Artists</a>
+        <a href="artwork.html" class = "navbutton">Artworks</a>
+        <a href="events.html" class = "navbutton">Events</a>
+        </div>
+        </div>
+        <div class = "navlogo">
+          <a href="index.html" ><img src = "img/logo.png" alt = "logo"></a>
+        <span  onclick="openNav()" class = "burgericon">&#9776; </span>
+      </div>
+
+      </div>
+
+
+
+        <!-- burger menu end here -->
 
     <!-- banner -->
     <div class="flex-grid banner">
@@ -43,7 +66,7 @@ Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculu
 Cras suscipit enim nec mauris euismod lobortis. Praesent condimentum tempus neque, vitae porttitor elit molestie nec. Aenean et ex massa. Sed tempus nisl in pellentesque lobortis. Donec vestibulum neque leo, ut euismod purus auctor id. Suspendisse nec metus vitae libero fringilla finibus. Curabitur sed viverra purus. Vivamus in dictum nisi. Sed diam metus, faucibus sit amet lectus non, sodales vulputate massa. Curabitur eget felis id nisl dictum iaculis eu non nisl. Nam a ligula id quam eleifend placerat at ac augue. Phasellus viverra pharetra nibh ut ultrices.</p>
     </div>
 
-</div>
+
 
 
     <!-- footer -->
@@ -53,12 +76,12 @@ Cras suscipit enim nec mauris euismod lobortis. Praesent condimentum tempus nequ
             <a class="intextlink" href="about.html">About Us</a>
           </div>
           <div class = "three-col">
-            <a class="intextlink" href="termsofuse.html">Terms of Use</a>
+            <a class="intextlink" href="Style_guide.html">Style Guide/Citations/Github</a>
           </div>
           <div class = "three-col">
             <a class="intextlink" href="contact.html">Contact Us</a>
           </div>
         </div>
-
+<script src="js/mobile_menu.js"></script>
   </body>
   </html>
