--- a/artworkdetail2.html
+++ b/artworkdetail2.html
@@ -47,28 +47,28 @@
 <!-- show case artist -->
 <div class="artworkdetail">
 
-  <h2 class="h2">Pilgrimage</h2>
+  <h2 class="h2">Q POP</h2>
 
 
 
     <div class="flex-grid">
       <div class = "three-col">
-        <img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct">
+        <img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2.png" alt="sct">
       </div>
       <div class = "three-col">
-        <h3 class="h3">$80</h3>
+        <h3 class="h3">$50<h3>
           <p>Artwork description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis.</p>
           <div class = "singlebutton">
-          <a class="submit" href="rule.html">Commission</a>
+          <a class="submit" href="rule2.html">Commission</a>
         </div>
       </div>
         <div class = "three-col profile">
-          <a href="artistdetail.html"><img src = "img/26605861_p0_meitu_11.png" alt = "prf"></a>
-          <a href="artistdetail.html" class="intextlink">Natsume Kazuki</a>
+          <a href="artistdetail.html"><img src = "img/tumblr_ms5fl1J7DJ1qgsw73o1_r1_1280c.png" alt = "prf"></a>
+          <a href="artistdetail.html" class="intextlink">Sachin Teng</a>
 
-          <p class = "attribution">Average finishing Time: 3 days</p>
-          <p class = "attribution">Average price: $100</p>
-          <p class = "attribution">Rate: 7.8</p>
+          <p class = "attribution">Average finishing Time: 7days</p>
+          <p class = "attribution">Average price: $300</p>
+          <p class = "attribution">Rate: 8.6</p>
           <p>Artist description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt justo auctor lacinia cursus. Duis blandit ultrices diam et placerat. Curabitur neque libero, interdum nec nunc in, luctus consectetur massa. Aenean non malesuada felis, ut ullamcorper ex. Nunc pulvinar viverra tortor, quis porttitor mi pulvinar ut. Vestibulum eu augue quis massa fringilla eleifend. Praesent ut massa in lorem blandit posuere. Sed suscipit dui elit, sed dignissim tortor ornare quis.</p>
 
         </div>
