--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,34 @@
     <!-- navigation bar -->
     <nav class = "navigation navbar">
       <div class = "navlogo"><a href="index.html"><img src = "img/logo.png" alt = "logo"></a></div>
-      <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
-      <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
-      <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
-      <div class = "navelement"><a href="account.html" class = "navbutton">Account</a></div>
+      <div class = "navspace"></div>
+        <div class = "navelement"><a href="artists.html" class = "navbutton">Artists</a></div>
+        <div class = "navelement"><a href="artwork.html" class = "navbutton">Artworks</a></div>
+        <div class = "navelement"><a href="events.html" class = "navbutton">Events</a></div>
+
     </nav>
+
+    <!-- this is burger menu for the mobile -->
+    <div class = "mobilemenu">
+
+        <div id="myNav" class="overlay">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <div class="overlay-content">
+        <a href="artists.html" class = "navbutton">Artists</a>
+        <a href="artwork.html" class = "navbutton">Artworks</a>
+        <a href="events.html" class = "navbutton">Events</a>
+        </div>
+        </div>
+        <div class = "navlogo">
+          <a href="index.html" ><img src = "img/logo.png" alt = "logo"></a>
+        <span  onclick="openNav()" class = "burgericon">&#9776; </span>
+      </div>
+
+      </div>
+
+
+
+        <!-- burger menu end here -->
 
     <!-- banner -->
     <div class="flex-grid banner">
@@ -60,12 +83,12 @@
             <a class="intextlink" href="about.html">About Us</a>
           </div>
           <div class = "three-col">
-            <a class="intextlink" href="termsofuse.html">Terms of Use</a>
+            <a class="intextlink" href="Style_guide.html">Style Guide/Citations/Github</a>
           </div>
           <div class = "three-col">
             <a class="intextlink" href="contact.html">Contact Us</a>
           </div>
         </div>
-
+<script src="js/mobile_menu.js"></script>
   </body>
   </html>
