--- a/Citations.html
+++ b/Citations.html
@@ -83,6 +83,21 @@
         <li>
           <cite>Sachin</cite>. (Artist). (2013). <strong>Paper Tiger</strong> [Media]. Retrieved from <a href="http://www.sachinteng.com/blank-cz1u">http://www.sachinteng.com/blank-cz1u</a>
         </li>
+        <li>
+          <cite>Natsume</cite>. (Artist). (2012). <strong>2Y</strong> [Media]. Retrieved from <a href="https://www.pixiv.net/member_illust.php?mode=medium&illust_id=26605861">https://www.pixiv.net/member_illust.php?mode=medium&illust_id=26605861</a>
+        </li>
+        <li>
+          <cite>Kohske</cite>. (Artist). (2010). <strong>Nicolas Brown</strong> [Media]. Retrieved from <a href="https://pbs.twimg.com/media/CTQq9d-UAAANn7A.png">https://pbs.twimg.com/media/CTQq9d-UAAANn7A.png</a>
+        </li>
+        <li>
+          <cite>Kuroblood</cite>. (Artist). (2012). <strong>Thunder</strong> [Media]. Retrieved from <a href="https://akurave.tumblr.com/">https://akurave.tumblr.com/</a>
+        </li>
+        <li>
+          <cite>Cesar</cite>. (Artist). (2014). <strong>Social network</strong> [Media]. Retrieved from <a href="https://www.artstation.com/artwork/18yGX">https://www.artstation.com/artwork/18yGX</a>
+        </li>
+        <li>
+          <cite>Chun</cite>. (Artist). (2017). <strong>Oni Mask, The Wolf, Strife, Embrace</strong> [Media]. Retrieved from <a href="https://society6.com/belgeist/prints">https://society6.com/belgeist/prints</a>
+        </li>
       </ul>
 
     </section>
@@ -106,7 +121,7 @@
         <li>
           <cite>h3schools.com</cite>. (Programmer). (2014). <strong>How TO - Full screen Overlay Navigation, How TO - Add Image Effects, Table, Select</strong> [Tutorial]. Retrieved from <a href="https://www.w3schools.com/">https://www.w3schools.com/</a>
         </li>
-        
+
       </ul>
 
     </section>
