--- a/artistdetail.html
+++ b/artistdetail.html
@@ -46,7 +46,7 @@
 
 <!-- show case artist -->
 <div class="artistdetail">
-  <img src = "img/tumblr_ms5fl1J7DJ1qgsw73o1_r1_1280c.png" alt = "prf">
+  <img src = "img/tumblr_ms5fl1J7DJ1qgsw73o1_r1_1280c.png" alt = "profolio img">
 
   <h2 class="h2">Sachin Teng</h2>
 
@@ -65,15 +65,15 @@
           </div>
           <div class="flex-grid">
           <div class = "three-col">
-            <a href="artworkdetail.html" class = "intextlink"><img src="img/65d721_761db9a0c113407f924a824ed173ed26_meitu_4.jpg" alt="sct"></a>
+            <a href="artworkdetail.html" class = "intextlink"><img src="img/65d721_761db9a0c113407f924a824ed173ed26_meitu_4.jpg" alt="sample img"></a>
             <a href="artworkdetail.html" class = "intextlink"><p>Pilgrimage</p></a>
           </div>
           <div class = "three-col">
-            <a href="#"><img src="img/65d721_656530a40b693b9fd1c1fb42477a15c1_meitu_5.jpg" alt="sct"></a>
+            <a href="#"><img src="img/65d721_656530a40b693b9fd1c1fb42477a15c1_meitu_5.jpg" alt="sample img"></a>
             <a href="artworkdetail.html" class = "intextlink"><p>Paper Tiger</p></a>
             </div>
             <div class = "three-col">
-            <a href="#"><img src="img/65d721_f9c68a3a88c54f2fa74a9e28b92fe31f-mv2_meitu_6.jpg" alt="sct"></a>
+            <a href="#"><img src="img/65d721_f9c68a3a88c54f2fa74a9e28b92fe31f-mv2_meitu_6.jpg" alt="sample img"></a>
             <a href="artworkdetail.html" class = "intextlink"><p>Viscera</p></a>
             </div>
           </div>
