--- a/artworkdetail.html
+++ b/artworkdetail.html
@@ -53,7 +53,7 @@
 
     <div class="flex-grid">
       <div class = "three-col">
-        <img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct">
+        <img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sample img">
       </div>
       <div class = "three-col">
         <h3 class="h3">$80</h3>
@@ -63,7 +63,7 @@
         </div>
       </div>
         <div class = "three-col profile">
-          <a href="artistdetail.html"><img src = "img/26605861_p0_meitu_11.png" alt = "prf"></a>
+          <a href="artistdetail.html"><img src = "img/26605861_p0_meitu_11.png" alt = "profolio img"></a>
           <a href="artistdetail.html" class="intextlink">Natsume Kazuki</a>
 
           <p class = "attribution">Average finishing Time: 3 days</p>
