--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
   <h2 class="h2 hometitle">Newest Artists</h2>
     <div class="flex-grid">
       <div class = "three-col homeartist">
-        <a href="artistdetail.html"><img src = "img/tumblr_ms5fl1J7DJ1qgsw73o1_r1_1280c.png" alt = "prf"></a>
+        <a href="artistdetail.html"><img src = "img/tumblr_ms5fl1J7DJ1qgsw73o1_r1_1280c.png" alt = "profolio img"></a>
         <a href="artistdetail.html" class="intextlink">Sachin Teng</a>
         <p class = "attribution">Rate: 8.6</p>
 
       </div>
       <div class = "three-col homeartist">
-        <a href="artistdetail.html"><img src = "img/26605861_p0_meitu_11.png" alt = "prf"></a>
+        <a href="artistdetail.html"><img src = "img/26605861_p0_meitu_11.png" alt = "profolio imag"></a>
         <a href="artistdetail.html" class="intextlink">Natsume Kazuki</a>
         <p class = "attribution">Rate: 7.8</p>
 
       </div>
       <div class = "three-col homeartist">
-        <a href="artistdetail.html"><img src = "img/tumblr_lwi05bxXHA1qfxndqo1_500_meitu_13.png" alt = "prf"></a>
+        <a href="artistdetail.html"><img src = "img/tumblr_lwi05bxXHA1qfxndqo1_500_meitu_13.png" alt = "profolio img"></a>
         <a href="artistdetail.html" class="intextlink">Kohske</a>
         <p class = "attribution">Rate: 8.0</p>
 
@@ -86,15 +86,15 @@
       <h2 class="h2 hometitle">Newest Artworks</h2>
         <div class="flex-grid">
           <div class = "three-col">
-            <a href="artworkdetail2.html" class = "intextlink"><img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2_meitu_3.jpg" alt="sct"></a>
+            <a href="artworkdetail2.html" class = "intextlink"><img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2_meitu_3.jpg" alt="sample img"></a>
             <a href="artworkdetail.html" class = "intextlink"><p>Q POP</p></a>
           </div>
           <div class = "three-col">
-            <a href="artworkdetail.html"><img src="img/65d721_656530a40b693b9fd1c1fb42477a15c1_meitu_5.jpg" alt="sct"></a>
+            <a href="artworkdetail.html"><img src="img/65d721_656530a40b693b9fd1c1fb42477a15c1_meitu_5.jpg" alt="sample img"></a>
             <a href="artworkdetail.html" class = "intextlink"><p>Paper Tiger</p></a>
             </div>
             <div class = "three-col">
-            <a href="artworkdetail.html"><img src="img/65d721_f9c68a3a88c54f2fa74a9e28b92fe31f-mv2_meitu_6.jpg" alt="sct"></a>
+            <a href="artworkdetail.html"><img src="img/65d721_f9c68a3a88c54f2fa74a9e28b92fe31f-mv2_meitu_6.jpg" alt="sample img"></a>
             <a href="artworkdetail.html" class = "intextlink"><p>Viscera</p></a>
             </div>
           </div>
