--- a/review.html
+++ b/review.html
@@ -53,7 +53,7 @@
 
     <div class="flex-grid">
       <div class = "two-col1 order2">
-        <img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sct">
+        <img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sample img">
       </div>
       <div class = "two-col2">
         <nav class="filter">
