--- a/review2.html
+++ b/review2.html
@@ -53,7 +53,7 @@
 
     <div class="flex-grid">
       <div class = "two-col1 order2">
-        <img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2.png" alt="sct">
+        <img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2.png" alt="sample img">
       </div>
       <div class = "two-col2">
         <nav class="filter">
