--- a/artists.html
+++ b/artists.html
@@ -125,27 +125,27 @@
 
 <div class="flex-grid">
   <div class = "three-col">
-    <a href="artistdetail.html"><img src="img/julio-cesar-coisa-coisa_meitu_10.jpg" alt="sct"></a>
+    <a href="artistdetail.html"><img src="img/julio-cesar-coisa-coisa_meitu_10.jpg" alt="sample img"></a>
     <a href="artistdetail.html" class="intextlink"><p>Julio Cesar</p></a>
   </div>
   <div class = "three-col">
-    <a href="#"><img src="img/26605861_p0_meitu_11.jpg" alt="sct"></a>
+    <a href="#"><img src="img/26605861_p0_meitu_11.jpg" alt="sample img"></a>
     <a href="artistdetail.html" class="intextlink"><p>Natsume Kazuki</p></a>
     </div>
     <div class = "three-col">
-    <a href="#"><img src="img/44236350_p35_meitu_12.jpg" alt="sct"></a>
+    <a href="#"><img src="img/44236350_p35_meitu_12.jpg" alt="sample img"></a>
     <a href="artistdetail.html" class="intextlink"><p>Kuroblood</p></a>
     </div>
     <div class = "three-col">
-      <a href="artistdetail.html"><img src="img/65d721_f9c68a3a88c54f2fa74a9e28b92fe31f-mv2_meitu_6.jpg" alt="sct"></a>
+      <a href="artistdetail.html"><img src="img/65d721_f9c68a3a88c54f2fa74a9e28b92fe31f-mv2_meitu_6.jpg" alt="sample img"></a>
       <a href="artistdetail.html" class="intextlink"><p>Sachin Teng</p></a>
     </div>
     <div class = "three-col">
-      <a href="#"><img src="img/tumblr_lwi05bxXHA1qfxndqo1_500_meitu_13.jpg" alt="sct"></a>
+      <a href="#"><img src="img/tumblr_lwi05bxXHA1qfxndqo1_500_meitu_13.jpg" alt="sample img"></a>
       <a href="artistdetail.html" class="intextlink"><p>Kohske</p></a>
       </div>
       <div class = "three-col">
-      <a href="#"><img src="img/735_max_meitu_14.jpg" alt="sct"></a>
+      <a href="#"><img src="img/735_max_meitu_14.jpg" alt="sample img"></a>
       <a href="artistdetail.html" class="intextlink"><p>John Liberto</p></a>
       </div>
   </div>
