--- a/artwork.html
+++ b/artwork.html
@@ -125,27 +125,27 @@
 
   <div class="flex-grid">
     <div class = "three-col">
-      <a href="artworkdetail.html" class = "intextlink"><img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2_meitu_3.jpg" alt="sct"></a>
+      <a href="artworkdetail.html" class = "intextlink"><img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2_meitu_3.jpg" alt="sample img"></a>
       <a href="artworkdetail.html" class = "intextlink"><p>Q POP</p></a>
     </div>
     <div class = "three-col">
-      <a href="artworkdetail.html"><img src="img/65d721_656530a40b693b9fd1c1fb42477a15c1_meitu_5.jpg" alt="sct"></a>
+      <a href="artworkdetail.html"><img src="img/65d721_656530a40b693b9fd1c1fb42477a15c1_meitu_5.jpg" alt="sample img"></a>
       <a href="artworkdetail.html" class = "intextlink"><p>Paper Tiger</p></a>
       </div>
       <div class = "three-col">
-      <a href="artworkdetail.html"><img src="img/65d721_f9c68a3a88c54f2fa74a9e28b92fe31f-mv2_meitu_6.jpg" alt="sct"></a>
+      <a href="artworkdetail.html"><img src="img/65d721_f9c68a3a88c54f2fa74a9e28b92fe31f-mv2_meitu_6.jpg" alt="sample img"></a>
       <a href="artworkdetail.html" class = "intextlink"><p>Viscera</p></a>
       </div>
       <div class = "three-col">
-        <a href="artworkdetail.html"><img src="img/26605861_p0_meitu_11.jpg" alt="sct"></a>
+        <a href="artworkdetail.html"><img src="img/26605861_p0_meitu_11.jpg" alt="sample img"></a>
         <a href="artworkdetail.html" class="intextlink"><p>2Y Law</p></a>
         </div>
         <div class = "three-col">
-        <a href="artworkdetail.html"><img src="img/44236350_p35_meitu_12.jpg" alt="sct"></a>
+        <a href="artworkdetail.html"><img src="img/44236350_p35_meitu_12.jpg" alt="sample img"></a>
         <a href="artworkdetail.html" class="intextlink"><p>Thunder Dragon</p></a>
         </div>
         <div class = "three-col">
-        <a href="artworkdetail.html"><img src="img/65d721_4dfa47a05152487fb3bc45ca2ec8fd1e_meitu_2.jpg" alt="sct"></a>
+        <a href="artworkdetail.html"><img src="img/65d721_4dfa47a05152487fb3bc45ca2ec8fd1e_meitu_2.jpg" alt="sample img"></a>
         <a href="artworkdetail.html" class="intextlink"><p>Nickelodeon Art</p></a>
         </div>
     </div>
