--- a/contact.html
+++ b/contact.html
@@ -60,15 +60,15 @@
 
             <div class="flex-grid contact">
               <div class = "three-col">
-                <a href="http://www.twitter.com"><img src="img/twitter.png" alt="sct"></a>
+                <a href="http://www.twitter.com"><img src="img/twitter.png" alt="social media icon"></a>
                 <p>Twitter</p>
               </div>
               <div class = "three-col">
-                <a href="http://www.facebook.com"><img src="img/facebook.png" alt="sct"></a>
+                <a href="http://www.facebook.com"><img src="img/facebook.png" alt="social media icon"></a>
                 <p>Facebook</p>
                 </div>
                 <div class = "three-col">
-                <a href="https://plus.google.com"><img src="img/google_plus.png" alt="sct"></a>
+                <a href="https://plus.google.com"><img src="img/google_plus.png" alt="social media icon"></a>
                 <p>Google Plus</p>
                 </div>
               </div>
