--- a/rule2.html
+++ b/rule2.html
@@ -53,7 +53,7 @@
 
     <div class="flex-grid">
       <div class = "three-col order2">
-        <img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2.png" alt="sct">
+        <img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2.png" alt="sample img">
       </div>
       <div class = "three-col">
 
@@ -71,7 +71,7 @@
         </div>
         </div>
         <div class = "three-col profile">
-          <img src = "img/tumblr_ms5fl1J7DJ1qgsw73o1_r1_1280c.png" alt = "prf">
+          <img src = "img/tumblr_ms5fl1J7DJ1qgsw73o1_r1_1280c.png" alt = "profolio img">
           <a href="artistdetail2.html" class="intextlink">Sachin Teng</a>
 
           <p class = "attribution">Average finishing Time: 7days</p>
