--- a/Style_guide.html
+++ b/Style_guide.html
@@ -420,7 +420,7 @@
     <tr>
       <th>Base price</th>
       <td> </td>
-      <td>&nbsp &nbsp$50</td>
+      <td>&nbsp; &nbsp;$50</td>
     </tr>
   </table>
 </nav>
