--- a/review.html
+++ b/review.html
@@ -56,7 +56,7 @@
         <img src="img/65d721_761db9a0c113407f924a824ed173ed26.png" alt="sample img">
       </div>
       <div class = "two-col2">
-        <nav class="filter">
+        <nav class="filter reviewlist">
         <table>
           <tr>
             <th>How many characters?</th>
