--- a/review2.html
+++ b/review2.html
@@ -56,7 +56,7 @@
         <img src="img/65d721_8cbd84d2a1fb442cb3a017fdda2e1abd-mv2.png" alt="sample img">
       </div>
       <div class = "two-col2">
-        <nav class="filter">
+        <nav class="filter reviewlist">
         <table>
           <tr>
             <th>How many characters?</th>
